--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.4.1/sandstone/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<title>Rosie Odenkirk | CV</title>
 </head>
 <body>
     <header>
@@ -24,18 +24,18 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
+                     <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                            <a href= "#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                            <a href= "index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                            <a href= "#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                            <a href= "resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                            <a href= "#" class="hvr-sweep-to-bottom"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                            <a href= "contact.html" class="hvr-sweep-to-bottom"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                            <a href= "#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <a href= "assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -54,21 +54,23 @@
                             <h3 class="history-heading uppercase">Work History</h3>
                         </div>
                     </div>
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
-                    </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Junior Embalmer</p>
-                    </div>
-                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
-                    </div>
-                    <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
+                    <div class="history-items">
+                        <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                            <h4>National College of Art and Design (NCAD)</h4>
+                            <p>Sculptor in residence</p>
+                        </div>
+                        <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                            <h4>Fisher and Diaz Funeral Directors</h4>
+                            <p>Junior Embalmer</p>
+                        </div>
+                        <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                            <h4>Phantom Design Inc. Dublin</h4>
+                            <p>Junior Front End Developer</p>
+                        </div>
+                        <div class="timeline-item" data-dates="06/2011 - Present">
+                            <h4>Hooli Inc. Silicon Valley</h4>
+                            <p>Full Stack Web Developer</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-8 bg-color-three-reasons section-column">
@@ -153,7 +155,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="#" target="_blank" class="cv-pdf">
+                <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                 <i class="fa fa-download" aria-hidden="true"></i>
                 <span class="sr-only">Download link.</span>
                 </a>
